--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
                 <version>2.22.2</version>
                 <configuration>
                     <suiteXmlFiles>
-<!--                        <suiteXmlFile>parallel.xml</suiteXmlFile>-->
+                        <suiteXmlFile>parallel.xml</suiteXmlFile>
                     </suiteXmlFiles>
                     <testFailureIgnore>true</testFailureIgnore>
                     <argLine>
